src/fr/ubordeaux/deptinfo/compilation/lea/parser/Parser.output
Terminals unused in grammar

    "%="
    "comparable"
    "equivalent"
    '%'


Grammar

    0 $accept: S $end

    1 S: imports declarations

    2 imports: %empty
    3        | imports import

    4 import: "import" CONSTANT_STRING

    5 declarations: declarations declaration
    6             | declaration

    7 declaration: "class" IDENTIFIER implements extends '{' push_environment class_definition pop_environment '}'
    8            | "class" "main" '{' push_environment class_definition pop_environment '}'
    9            | "interface" IDENTIFIER extends_public '{' push_environment interface_definition pop_environment '}'

   10 implements: %empty
   11           | "implements" class_names

   12 extends: %empty
   13        | "extends" determiner class_name

   14 extends_public: %empty
   15               | "extends" class_name

   16 class_names: class_names ',' class_name
   17            | class_name

   18 class_name: IDENTIFIER
   19           | IDENTIFIER '<' class_names '>'

   20 class_definition: %empty
   21                 | class_definition_head class_definition

   22 class_definition_head: type_definition
   23                      | const_definition
   24                      | attribute_definition
   25                      | method_definition

   26 type_definition: "type" IDENTIFIER ":=" type_expression

   27 const_definition: "const" IDENTIFIER ":=" const_expression

   28 attribute_definition: determiner IDENTIFIER ':' type_expression ';'

   29 push_environment: %empty

   30 pop_environment: %empty

   31 $@1: %empty

   32 $@2: %empty

   33 method_definition: "main" '(' args_definition ')' $@1 push_environment $@2 block pop_environment

   34 $@3: %empty

   35 $@4: %empty

   36 method_definition: determiner IDENTIFIER '(' args_definition ')' $@3 push_environment $@4 block pop_environment

   37 $@5: %empty

   38 $@6: %empty

   39 method_definition: determiner IDENTIFIER '(' args_definition ')' $@5 push_environment $@6 ';' pop_environment

   40 $@7: %empty

   41 $@8: %empty

   42 method_definition: determiner specifier "procedure" IDENTIFIER '(' args_definition ')' $@7 push_environment $@8 block pop_environment

   43 $@9: %empty

   44 $@10: %empty

   45 method_definition: determiner specifier "procedure" IDENTIFIER '(' args_definition ')' $@9 push_environment $@10 ';' pop_environment

   46 $@11: %empty

   47 $@12: %empty

   48 method_definition: determiner specifier "function" IDENTIFIER '(' args_definition ')' ':' type_expression $@11 push_environment $@12 block pop_environment

   49 $@13: %empty

   50 $@14: %empty

   51 method_definition: determiner specifier "function" IDENTIFIER '(' args_definition ')' ':' type_expression $@13 push_environment $@14 ';' pop_environment

   52 determiner: %empty
   53           | "private"
   54           | "public"
   55           | "protected"

   56 specifier: %empty
   57          | "virtual"
   58          | "final"

   59 interface_definition: %empty
   60                     | interface_definition_head interface_definition

   61 interface_definition_head: "procedure" IDENTIFIER '(' args_definition ')' ';'
   62                          | "function" IDENTIFIER '(' args_definition ')' ':' type_expression ';'

   63 type_expression: "char"
   64                | "integer"
   65                | "float"
   66                | "boolean"
   67                | "string"
   68                | "enum" '<' type_names '>'
   69                | "range" '<' type_expression '>'
   70                | "list" '<' type_expression '>'
   71                | "set" '<' type_expression '>'
   72                | "map" '<' type_expression ',' type_expression '>'
   73                | type_expression_class

   74 type_expression_class: IDENTIFIER '<' type_expressions '>'
   75                      | IDENTIFIER

   76 type_expressions: type_expressions ',' type_expression
   77                 | type_expression

   78 type_names: type_names ',' type_name
   79           | type_name

   80 type_name: IDENTIFIER

   81 args_definition: args_definition ',' arg_definition
   82                | arg_definition

   83 arg_definition: IDENTIFIER ':' type_expression

   84 block: '{' var_definitions stms '}'

   85 var_definitions: %empty
   86                | var_definitions var_definition

   87 var_definition: IDENTIFIER ':' type_expression ';'

   88 stms: stms stm
   89     | stm

   90 stm: simple_stm ';'
   91    | "if" '(' expression ')' stm
   92    | "if" '(' expression ')' stm "else" stm
   93    | "while" '(' expression ')' stm
   94    | "do" stm "while" '(' expression ')' ';'
   95    | "for" '(' assigned_variable ':' expression ')' stm
   96    | "for" '(' assignment_stm ';' expression ';' simple_stm ')' stm
   97    | "foreach" assigned_variable "in" expression stm
   98    | "switch" '(' expression ')' '{' case_stms '}'
   99    | block

  100 case_stms: case_stm case_stms
  101          | case_stm
  102          | default_stm

  103 case_stm: "case" expression ':' stm

  104 default_stm: "default" ':' stm

  105 assignment_stm: assigned_variable ":=" expression
  106               | IDENTIFIER ':' type_expression ":=" expression

  107 simple_stm: assignment_stm
  108           | assigned_variable "++"
  109           | assigned_variable "--"
  110           | assigned_variable "+=" expression
  111           | assigned_variable "-=" expression
  112           | assigned_variable "*=" expression
  113           | assigned_variable "/=" expression
  114           | assigned_variable "||=" expression
  115           | assigned_variable "&&=" expression
  116           | assigned_variable "&=" expression
  117           | assigned_variable "|=" expression
  118           | assigned_variable "<<=" expression
  119           | assigned_variable ">>=" expression
  120           | method_name '(' args ')'
  121           | "readln" '(' expression ')'
  122           | "write" '(' expression ')'
  123           | "writeln" '(' expression ')'
  124           | "break"
  125           | "continue"
  126           | "return" expression

  127 assigned_variable: IDENTIFIER
  128                  | IDENTIFIER '[' args ']'
  129                  | assigned_variable '.' IDENTIFIER
  130                  | "this"

  131 method_name: IDENTIFIER
  132            | assigned_variable '.' IDENTIFIER

  133 args: args ',' expression
  134     | expression

  135 const_expression: "null"
  136                 | CONSTANT_INTEGER
  137                 | CONSTANT_FLOAT
  138                 | CONSTANT_CHAR
  139                 | CONSTANT_STRING
  140                 | '[' const_expression ".." const_expression ']'

  141 expression: const_expression
  142           | assigned_variable
  143           | method_name '(' args ')'
  144           | "new" type_expression_class '(' args_opt ')'
  145           | expression "&&" expression
  146           | expression "||" expression
  147           | '!' expression
  148           | expression '<' expression
  149           | expression "<=" expression
  150           | expression '>' expression
  151           | expression ">=" expression
  152           | expression "==" expression
  153           | expression "!=" expression
  154           | expression '+' expression
  155           | expression '-' expression
  156           | '-' expression
  157           | expression '*' expression
  158           | expression '/' expression
  159           | expression "++"
  160           | expression "--"
  161           | "++" expression
  162           | "--" expression
  163           | expression '&' expression
  164           | expression '|' expression
  165           | expression "<<" expression
  166           | expression ">>" expression
  167           | '(' expression ')'

  168 args_opt: %empty
  169         | args


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 147
    '%' (37)
    '&' (38) 163
    '(' (40) 33 36 39 42 45 48 51 61 62 91 92 93 94 95 96 98 120 121 122 123 143 144 167
    ')' (41) 33 36 39 42 45 48 51 61 62 91 92 93 94 95 96 98 120 121 122 123 143 144 167
    '*' (42) 157
    '+' (43) 154
    ',' (44) 16 72 76 78 81 133
    '-' (45) 155 156
    '.' (46) 129 132
    '/' (47) 158
    ':' (58) 28 48 51 62 83 87 95 103 104 106
    ';' (59) 28 39 45 51 61 62 87 90 94 96
    '<' (60) 19 68 69 70 71 72 74 148
    '>' (62) 19 68 69 70 71 72 74 150
    '[' (91) 128 140
    ']' (93) 128 140
    '{' (123) 7 8 9 84 98
    '|' (124) 164
    '}' (125) 7 8 9 84 98
    error (256)
    ":=" (258) 26 27 105 106
    "+=" (259) 110
    "-=" (260) 111
    "*=" (261) 112
    "/=" (262) 113
    "%=" (263)
    "||=" (264) 114
    "&&=" (265) 115
    "&=" (266) 116
    "|=" (267) 117
    "<<=" (268) 118
    ">>=" (269) 119
    "++" (270) 108 159 161
    "--" (271) 109 160 162
    "&&" (272) 145
    "||" (273) 146
    "<<" (274) 165
    ">>" (275) 166
    ".." (276) 140
    "==" (277) 152
    "<=" (278) 149
    ">=" (279) 151
    "!=" (280) 153
    "boolean" (281) 66
    "break" (282) 124
    "case" (283) 103
    "char" (284) 63
    "class" (285) 7 8
    "comparable" (286)
    "const" (287) 27
    "continue" (288) 125
    "default" (289) 104
    "do" (290) 94
    "else" (291) 92
    "enum" (292) 68
    "equivalent" (293)
    "extends" (294) 13 15
    "final" (295) 58
    "float" (296) 65
    "for" (297) 95 96
    "foreach" (298) 97
    "function" (299) 48 51 62
    "if" (300) 91 92
    "implements" (301) 11
    "import" (302) 4
    "in" (303) 97
    "integer" (304) 64
    "interface" (305) 9
    "list" (306) 70
    "map" (307) 72
    "main" (308) 8 33
    "new" (309) 144
    "null" (310) 135
    "private" (311) 53
    "protected" (312) 55
    "public" (313) 54
    "procedure" (314) 42 45 61
    "range" (315) 69
    "readln" (316) 121
    "return" (317) 126
    "set" (318) 71
    "string" (319) 67
    "switch" (320) 98
    "this" (321) 130
    "type" (322) 26
    "virtual" (323) 57
    "write" (324) 122
    "writeln" (325) 123
    "while" (326) 93 94
    IDENTIFIER <String> (327) 7 9 18 19 26 27 28 36 39 42 45 48 51 61 62 74 75 80 83 87 106 127 128 129 131 132
    CONSTANT_STRING <String> (328) 4 139
    CONSTANT_INTEGER <Integer> (329) 136
    CONSTANT_CHAR <Integer> (330) 138
    CONSTANT_FLOAT <Float> (331) 137
    ASSIGNED_VARIABLE (332)
    WITHOUT_ELSE (333)
    DETERMINER (334)
    SPECIFIER (335)
    LEFTPLUSPLUS (336)
    LEFTMINUSMINUS (337)
    UMINUS (338)


Nonterminals, with rules where they appear

    $accept (104)
        on left: 0
    S (105)
        on left: 1
        on right: 0
    imports (106)
        on left: 2 3
        on right: 1 3
    import (107)
        on left: 4
        on right: 3
    declarations (108)
        on left: 5 6
        on right: 1 5
    declaration (109)
        on left: 7 8 9
        on right: 5 6
    implements (110)
        on left: 10 11
        on right: 7
    extends (111)
        on left: 12 13
        on right: 7
    extends_public (112)
        on left: 14 15
        on right: 9
    class_names (113)
        on left: 16 17
        on right: 11 16 19
    class_name (114)
        on left: 18 19
        on right: 13 15 16 17
    class_definition <Type> (115)
        on left: 20 21
        on right: 7 8 21
    class_definition_head <Type> (116)
        on left: 22 23 24 25
        on right: 21
    type_definition (117)
        on left: 26
        on right: 22
    const_definition <Type> (118)
        on left: 27
        on right: 23
    attribute_definition <Type> (119)
        on left: 28
        on right: 24
    push_environment (120)
        on left: 29
        on right: 7 8 9 33 36 39 42 45 48 51
    pop_environment (121)
        on left: 30
        on right: 7 8 9 33 36 39 42 45 48 51
    method_definition <Type> (122)
        on left: 33 36 39 42 45 48 51
        on right: 25
    $@1 (123)
        on left: 31
        on right: 33
    $@2 (124)
        on left: 32
        on right: 33
    $@3 (125)
        on left: 34
        on right: 36
    $@4 (126)
        on left: 35
        on right: 36
    $@5 (127)
        on left: 37
        on right: 39
    $@6 (128)
        on left: 38
        on right: 39
    $@7 (129)
        on left: 40
        on right: 42
    $@8 (130)
        on left: 41
        on right: 42
    $@9 (131)
        on left: 43
        on right: 45
    $@10 (132)
        on left: 44
        on right: 45
    $@11 (133)
        on left: 46
        on right: 48
    $@12 (134)
        on left: 47
        on right: 48
    $@13 (135)
        on left: 49
        on right: 51
    $@14 (136)
        on left: 50
        on right: 51
    determiner (137)
        on left: 52 53 54 55
        on right: 13 28 36 39 42 45 48 51
    specifier (138)
        on left: 56 57 58
        on right: 42 45 48 51
    interface_definition <Type> (139)
        on left: 59 60
        on right: 9 60
    interface_definition_head <Type> (140)
        on left: 61 62
        on right: 60
    type_expression <Type> (141)
        on left: 63 64 65 66 67 68 69 70 71 72 73
        on right: 26 28 48 51 62 69 70 71 72 76 77 83 87 106
    type_expression_class <Type> (142)
        on left: 74 75
        on right: 73 144
    type_expressions <Type> (143)
        on left: 76 77
        on right: 74 76
    type_names <Type> (144)
        on left: 78 79
        on right: 68 78
    type_name <Type> (145)
        on left: 80
        on right: 78 79
    args_definition <Type> (146)
        on left: 81 82
        on right: 33 36 39 42 45 48 51 61 62 81
    arg_definition <Type> (147)
        on left: 83
        on right: 81 82
    block <Stree> (148)
        on left: 84
        on right: 33 36 42 48 99
    var_definitions (149)
        on left: 85 86
        on right: 84 86
    var_definition (150)
        on left: 87
        on right: 86
    stms <Stree> (151)
        on left: 88 89
        on right: 84 88
    stm <Stree> (152)
        on left: 90 91 92 93 94 95 96 97 98 99
        on right: 88 89 91 92 93 94 95 96 97 103 104
    case_stms <Stree> (153)
        on left: 100 101 102
        on right: 98 100
    case_stm <Stree> (154)
        on left: 103
        on right: 100 101
    default_stm <Stree> (155)
        on left: 104
        on right: 102
    assignment_stm <Stree> (156)
        on left: 105 106
        on right: 96 107
    simple_stm <Stree> (157)
        on left: 107 108 109 110 111 112 113 114 115 116 117 118 119 120 121 122 123 124 125 126
        on right: 90 96
    assigned_variable <Stree> (158)
        on left: 127 128 129 130
        on right: 95 97 105 108 109 110 111 112 113 114 115 116 117 118 119 129 132 142
    method_name <Stree> (159)
        on left: 131 132
        on right: 120 143
    args <Stree> (160)
        on left: 133 134
        on right: 120 128 133 143 169
    const_expression <Stree> (161)
        on left: 135 136 137 138 139 140
        on right: 27 140 141
    expression <Stree> (162)
        on left: 141 142 143 144 145 146 147 148 149 150 151 152 153 154 155 156 157 158 159 160 161 162 163 164 165 166 167
        on right: 91 92 93 94 95 96 97 98 103 105 106 110 111 112 113 114 115 116 117 118 119 121 122 123 126 133 134 145 146 147 148 149 150 151 152 153 154 155 156 157 158 159 160 161 162 163 164 165 166 167
    args_opt <Stree> (163)
        on left: 168 169
        on right: 144


State 0

    0 $accept: • S $end
    1 S: • imports declarations
    2 imports: • %empty
    3        | • imports import

    $default  reduce using rule 2 (imports)

    S        go to state 1
    imports  go to state 2


State 1

    0 $accept: S • $end

    $end  shift, and go to state 3


State 2

    1 S: imports • declarations
    3 imports: imports • import
    4 import: • "import" CONSTANT_STRING
    5 declarations: • declarations declaration
    6             | • declaration
    7 declaration: • "class" IDENTIFIER implements extends '{' push_environment class_definition pop_environment '}'
    8            | • "class" "main" '{' push_environment class_definition pop_environment '}'
    9            | • "interface" IDENTIFIER extends_public '{' push_environment interface_definition pop_environment '}'

    "class"      shift, and go to state 4
    "import"     shift, and go to state 5
    "interface"  shift, and go to state 6

    import        go to state 7
    declarations  go to state 8
    declaration   go to state 9


State 3

    0 $accept: S $end •

    $default  accept


State 4

    7 declaration: "class" • IDENTIFIER implements extends '{' push_environment class_definition pop_environment '}'
    8            | "class" • "main" '{' push_environment class_definition pop_environment '}'

    "main"      shift, and go to state 10
    IDENTIFIER  shift, and go to state 11


State 5

    4 import: "import" • CONSTANT_STRING

    CONSTANT_STRING  shift, and go to state 12


State 6

    9 declaration: "interface" • IDENTIFIER extends_public '{' push_environment interface_definition pop_environment '}'

    IDENTIFIER  shift, and go to state 13


State 7

    3 imports: imports import •

    $default  reduce using rule 3 (imports)


State 8

    1 S: imports declarations •
    5 declarations: declarations • declaration
    7 declaration: • "class" IDENTIFIER implements extends '{' push_environment class_definition pop_environment '}'
    8            | • "class" "main" '{' push_environment class_definition pop_environment '}'
    9            | • "interface" IDENTIFIER extends_public '{' push_environment interface_definition pop_environment '}'

    "class"      shift, and go to state 4
    "interface"  shift, and go to state 6

    $default  reduce using rule 1 (S)

    declaration  go to state 14


State 9

    6 declarations: declaration •

    $default  reduce using rule 6 (declarations)


State 10

    8 declaration: "class" "main" • '{' push_environment class_definition pop_environment '}'

    '{'  shift, and go to state 15


State 11

    7 declaration: "class" IDENTIFIER • implements extends '{' push_environment class_definition pop_environment '}'
   10 implements: • %empty
   11           | • "implements" class_names

    "implements"  shift, and go to state 16

    $default  reduce using rule 10 (implements)

    implements  go to state 17


State 12

    4 import: "import" CONSTANT_STRING •

    $default  reduce using rule 4 (import)


State 13

    9 declaration: "interface" IDENTIFIER • extends_public '{' push_environment interface_definition pop_environment '}'
   14 extends_public: • %empty
   15               | • "extends" class_name

    "extends"  shift, and go to state 18

    $default  reduce using rule 14 (extends_public)

    extends_public  go to state 19


State 14

    5 declarations: declarations declaration •

    $default  reduce using rule 5 (declarations)


State 15

    8 declaration: "class" "main" '{' • push_environment class_definition pop_environment '}'
   29 push_environment: • %empty

    $default  reduce using rule 29 (push_environment)

    push_environment  go to state 20


State 16

   11 implements: "implements" • class_names
   16 class_names: • class_names ',' class_name
   17            | • class_name
   18 class_name: • IDENTIFIER
   19           | • IDENTIFIER '<' class_names '>'

    IDENTIFIER  shift, and go to state 21

    class_names  go to state 22
    class_name   go to state 23


State 17

    7 declaration: "class" IDENTIFIER implements • extends '{' push_environment class_definition pop_environment '}'
   12 extends: • %empty
   13        | • "extends" determiner class_name

    "extends"  shift, and go to state 24

    $default  reduce using rule 12 (extends)

    extends  go to state 25


State 18

   15 extends_public: "extends" • class_name
   18 class_name: • IDENTIFIER
   19           | • IDENTIFIER '<' class_names '>'

    IDENTIFIER  shift, and go to state 21

    class_name  go to state 26


State 19

    9 declaration: "interface" IDENTIFIER extends_public • '{' push_environment interface_definition pop_environment '}'

    '{'  shift, and go to state 27


State 20

    8 declaration: "class" "main" '{' push_environment • class_definition pop_environment '}'
   20 class_definition: • %empty
   21                 | • class_definition_head class_definition
   22 class_definition_head: • type_definition
   23                      | • const_definition
   24                      | • attribute_definition
   25                      | • method_definition
   26 type_definition: • "type" IDENTIFIER ":=" type_expression
   27 const_definition: • "const" IDENTIFIER ":=" const_expression
   28 attribute_definition: • determiner IDENTIFIER ':' type_expression ';'
   33 method_definition: • "main" '(' args_definition ')' $@1 push_environment $@2 block pop_environment
   36                  | • determiner IDENTIFIER '(' args_definition ')' $@3 push_environment $@4 block pop_environment
   39                  | • determiner IDENTIFIER '(' args_definition ')' $@5 push_environment $@6 ';' pop_environment
   42                  | • determiner specifier "procedure" IDENTIFIER '(' args_definition ')' $@7 push_environment $@8 block pop_environment
   45                  | • determiner specifier "procedure" IDENTIFIER '(' args_definition ')' $@9 push_environment $@10 ';' pop_environment
   48                  | • determiner specifier "function" IDENTIFIER '(' args_definition ')' ':' type_expression $@11 push_environment $@12 block pop_environment
   51                  | • determiner specifier "function" IDENTIFIER '(' args_definition ')' ':' type_expression $@13 push_environment $@14 ';' pop_environment
   52 determiner: • %empty
   53           | • "private"
   54           | • "public"
   55           | • "protected"

    "const"      shift, and go to state 28
    "main"       shift, and go to state 29
    "private"    shift, and go to state 30
    "protected"  shift, and go to state 31
    "public"     shift, and go to state 32
    "type"       shift, and go to state 33

    '}'       reduce using rule 20 (class_definition)
    $default  reduce using rule 52 (determiner)

    class_definition       go to state 34
    class_definition_head  go to state 35
    type_definition        go to state 36
    const_definition       go to state 37
    attribute_definition   go to state 38
    method_definition      go to state 39
    determiner             go to state 40


State 21

   18 class_name: IDENTIFIER •
   19           | IDENTIFIER • '<' class_names '>'

    '<'  shift, and go to state 41

    $default  reduce using rule 18 (class_name)


State 22

   11 implements: "implements" class_names •
   16 class_names: class_names • ',' class_name

    ','  shift, and go to state 42

    $default  reduce using rule 11 (implements)


State 23

   17 class_names: class_name •

    $default  reduce using rule 17 (class_names)


State 24

   13 extends: "extends" • determiner class_name
   52 determiner: • %empty
   53           | • "private"
   54           | • "public"
   55           | • "protected"

    "private"    shift, and go to state 30
    "protected"  shift, and go to state 31
    "public"     shift, and go to state 32

    $default  reduce using rule 52 (determiner)

    determiner  go to state 43


State 25

    7 declaration: "class" IDENTIFIER implements extends • '{' push_environment class_definition pop_environment '}'

    '{'  shift, and go to state 44


State 26

   15 extends_public: "extends" class_name •

    $default  reduce using rule 15 (extends_public)


State 27

    9 declaration: "interface" IDENTIFIER extends_public '{' • push_environment interface_definition pop_environment '}'
   29 push_environment: • %empty

    $default  reduce using rule 29 (push_environment)

    push_environment  go to state 45


State 28

   27 const_definition: "const" • IDENTIFIER ":=" const_expression

    IDENTIFIER  shift, and go to state 46


State 29

   33 method_definition: "main" • '(' args_definition ')' $@1 push_environment $@2 block pop_environment

    '('  shift, and go to state 47


State 30

   53 determiner: "private" •

    $default  reduce using rule 53 (determiner)


State 31

   55 determiner: "protected" •

    $default  reduce using rule 55 (determiner)


State 32

   54 determiner: "public" •

    $default  reduce using rule 54 (determiner)


State 33

   26 type_definition: "type" • IDENTIFIER ":=" type_expression

    IDENTIFIER  shift, and go to state 48


State 34

    8 declaration: "class" "main" '{' push_environment class_definition • pop_environment '}'
   30 pop_environment: • %empty

    $default  reduce using rule 30 (pop_environment)

    pop_environment  go to state 49


State 35

   20 class_definition: • %empty
   21                 | • class_definition_head class_definition
   21                 | class_definition_head • class_definition
   22 class_definition_head: • type_definition
   23                      | • const_definition
   24                      | • attribute_definition
   25                      | • method_definition
   26 type_definition: • "type" IDENTIFIER ":=" type_expression
   27 const_definition: • "const" IDENTIFIER ":=" const_expression
   28 attribute_definition: • determiner IDENTIFIER ':' type_expression ';'
   33 method_definition: • "main" '(' args_definition ')' $@1 push_environment $@2 block pop_environment
   36                  | • determiner IDENTIFIER '(' args_definition ')' $@3 push_environment $@4 block pop_environment
   39                  | • determiner IDENTIFIER '(' args_definition ')' $@5 push_environment $@6 ';' pop_environment
   42                  | • determiner specifier "procedure" IDENTIFIER '(' args_definition ')' $@7 push_environment $@8 block pop_environment
   45                  | • determiner specifier "procedure" IDENTIFIER '(' args_definition ')' $@9 push_environment $@10 ';' pop_environment
   48                  | • determiner specifier "function" IDENTIFIER '(' args_definition ')' ':' type_expression $@11 push_environment $@12 block pop_environment
   51                  | • determiner specifier "function" IDENTIFIER '(' args_definition ')' ':' type_expression $@13 push_environment $@14 ';' pop_environment
   52 determiner: • %empty
   53           | • "private"
   54           | • "public"
   55           | • "protected"

    "const"      shift, and go to state 28
    "main"       shift, and go to state 29
    "private"    shift, and go to state 30
    "protected"  shift, and go to state 31
    "public"     shift, and go to state 32
    "type"       shift, and go to state 33

    '}'       reduce using rule 20 (class_definition)
    $default  reduce using rule 52 (determiner)

    class_definition       go to state 50
    class_definition_head  go to state 35
    type_definition        go to state 36
    const_definition       go to state 37
    attribute_definition   go to state 38
    method_definition      go to state 39
    determiner             go to state 40


State 36

   22 class_definition_head: type_definition •

    $default  reduce using rule 22 (class_definition_head)


State 37

   23 class_definition_head: const_definition •

    $default  reduce using rule 23 (class_definition_head)


State 38

   24 class_definition_head: attribute_definition •

    $default  reduce using rule 24 (class_definition_head)


State 39

   25 class_definition_head: method_definition •

    $default  reduce using rule 25 (class_definition_head)


State 40

   28 attribute_definition: determiner • IDENTIFIER ':' type_expression ';'
   36 method_definition: determiner • IDENTIFIER '(' args_definition ')' $@3 push_environment $@4 block pop_environment
   39                  | determiner • IDENTIFIER '(' args_definition ')' $@5 push_environment $@6 ';' pop_environment
   42                  | determiner • specifier "procedure" IDENTIFIER '(' args_definition ')' $@7 push_environment $@8 block pop_environment
   45                  | determiner • specifier "procedure" IDENTIFIER '(' args_definition ')' $@9 push_environment $@10 ';' pop_environment
   48                  | determiner • specifier "function" IDENTIFIER '(' args_definition ')' ':' type_expression $@11 push_environment $@12 block pop_environment
   51                  | determiner • specifier "function" IDENTIFIER '(' args_definition ')' ':' type_expression $@13 push_environment $@14 ';' pop_environment
   56 specifier: • %empty
   57          | • "virtual"
   58          | • "final"

    "final"     shift, and go to state 51
    "virtual"   shift, and go to state 52
    IDENTIFIER  shift, and go to state 53

    $default  reduce using rule 56 (specifier)

    specifier  go to state 54


State 41

   16 class_names: • class_names ',' class_name
   17            | • class_name
   18 class_name: • IDENTIFIER
   19           | • IDENTIFIER '<' class_names '>'
   19           | IDENTIFIER '<' • class_names '>'

    IDENTIFIER  shift, and go to state 21

    class_names  go to state 55
    class_name   go to state 23


State 42

   16 class_names: class_names ',' • class_name
   18 class_name: • IDENTIFIER
   19           | • IDENTIFIER '<' class_names '>'

    IDENTIFIER  shift, and go to state 21

    class_name  go to state 56


State 43

   13 extends: "extends" determiner • class_name
   18 class_name: • IDENTIFIER
   19           | • IDENTIFIER '<' class_names '>'

    IDENTIFIER  shift, and go to state 21

    class_name  go to state 57


State 44

    7 declaration: "class" IDENTIFIER implements extends '{' • push_environment class_definition pop_environment '}'
   29 push_environment: • %empty

    $default  reduce using rule 29 (push_environment)

    push_environment  go to state 58


State 45

    9 declaration: "interface" IDENTIFIER extends_public '{' push_environment • interface_definition pop_environment '}'
   59 interface_definition: • %empty
   60                     | • interface_definition_head interface_definition
   61 interface_definition_head: • "procedure" IDENTIFIER '(' args_definition ')' ';'
   62                          | • "function" IDENTIFIER '(' args_definition ')' ':' type_expression ';'

    "function"   shift, and go to state 59
    "procedure"  shift, and go to state 60

    $default  reduce using rule 59 (interface_definition)

    interface_definition       go to state 61
    interface_definition_head  go to state 62


State 46

   27 const_definition: "const" IDENTIFIER • ":=" const_expression

    ":="  shift, and go to state 63


State 47

   33 method_definition: "main" '(' • args_definition ')' $@1 push_environment $@2 block pop_environment
   81 args_definition: • args_definition ',' arg_definition
   82                | • arg_definition
   83 arg_definition: • IDENTIFIER ':' type_expression

    IDENTIFIER  shift, and go to state 64

    args_definition  go to state 65
    arg_definition   go to state 66


State 48

   26 type_definition: "type" IDENTIFIER • ":=" type_expression

    ":="  shift, and go to state 67


State 49

    8 declaration: "class" "main" '{' push_environment class_definition pop_environment • '}'

    '}'  shift, and go to state 68


State 50

   21 class_definition: class_definition_head class_definition •

    $default  reduce using rule 21 (class_definition)


State 51

   58 specifier: "final" •

    $default  reduce using rule 58 (specifier)


State 52

   57 specifier: "virtual" •

    $default  reduce using rule 57 (specifier)


State 53

   28 attribute_definition: determiner IDENTIFIER • ':' type_expression ';'
   36 method_definition: determiner IDENTIFIER • '(' args_definition ')' $@3 push_environment $@4 block pop_environment
   39                  | determiner IDENTIFIER • '(' args_definition ')' $@5 push_environment $@6 ';' pop_environment

    ':'  shift, and go to state 69
    '('  shift, and go to state 70


State 54

   42 method_definition: determiner specifier • "procedure" IDENTIFIER '(' args_definition ')' $@7 push_environment $@8 block pop_environment
   45                  | determiner specifier • "procedure" IDENTIFIER '(' args_definition ')' $@9 push_environment $@10 ';' pop_environment
   48                  | determiner specifier • "function" IDENTIFIER '(' args_definition ')' ':' type_expression $@11 push_environment $@12 block pop_environment
   51                  | determiner specifier • "function" IDENTIFIER '(' args_definition ')' ':' type_expression $@13 push_environment $@14 ';' pop_environment

    "function"   shift, and go to state 71
    "procedure"  shift, and go to state 72


State 55

   16 class_names: class_names • ',' class_name
   19 class_name: IDENTIFIER '<' class_names • '>'

    '>'  shift, and go to state 73
    ','  shift, and go to state 42


State 56

   16 class_names: class_names ',' class_name •

    $default  reduce using rule 16 (class_names)


State 57

   13 extends: "extends" determiner class_name •

    $default  reduce using rule 13 (extends)


State 58

    7 declaration: "class" IDENTIFIER implements extends '{' push_environment • class_definition pop_environment '}'
   20 class_definition: • %empty
   21                 | • class_definition_head class_definition
   22 class_definition_head: • type_definition
   23                      | • const_definition
   24                      | • attribute_definition
   25                      | • method_definition
   26 type_definition: • "type" IDENTIFIER ":=" type_expression
   27 const_definition: • "const" IDENTIFIER ":=" const_expression
   28 attribute_definition: • determiner IDENTIFIER ':' type_expression ';'
   33 method_definition: • "main" '(' args_definition ')' $@1 push_environment $@2 block pop_environment
   36                  | • determiner IDENTIFIER '(' args_definition ')' $@3 push_environment $@4 block pop_environment
   39                  | • determiner IDENTIFIER '(' args_definition ')' $@5 push_environment $@6 ';' pop_environment
   42                  | • determiner specifier "procedure" IDENTIFIER '(' args_definition ')' $@7 push_environment $@8 block pop_environment
   45                  | • determiner specifier "procedure" IDENTIFIER '(' args_definition ')' $@9 push_environment $@10 ';' pop_environment
   48                  | • determiner specifier "function" IDENTIFIER '(' args_definition ')' ':' type_expression $@11 push_environment $@12 block pop_environment
   51                  | • determiner specifier "function" IDENTIFIER '(' args_definition ')' ':' type_expression $@13 push_environment $@14 ';' pop_environment
   52 determiner: • %empty
   53           | • "private"
   54           | • "public"
   55           | • "protected"

    "const"      shift, and go to state 28
    "main"       shift, and go to state 29
    "private"    shift, and go to state 30
    "protected"  shift, and go to state 31
    "public"     shift, and go to state 32
    "type"       shift, and go to state 33

    '}'       reduce using rule 20 (class_definition)
    $default  reduce using rule 52 (determiner)

    class_definition       go to state 74
    class_definition_head  go to state 35
    type_definition        go to state 36
    const_definition       go to state 37
    attribute_definition   go to state 38
    method_definition      go to state 39
    determiner             go to state 40


State 59

   62 interface_definition_head: "function" • IDENTIFIER '(' args_definition ')' ':' type_expression ';'

    IDENTIFIER  shift, and go to state 75


State 60

   61 interface_definition_head: "procedure" • IDENTIFIER '(' args_definition ')' ';'

    IDENTIFIER  shift, and go to state 76


State 61

    9 declaration: "interface" IDENTIFIER extends_public '{' push_environment interface_definition • pop_environment '}'
   30 pop_environment: • %empty

    $default  reduce using rule 30 (pop_environment)

    pop_environment  go to state 77


State 62

   59 interface_definition: • %empty
   60                     | • interface_definition_head interface_definition
   60                     | interface_definition_head • interface_definition
   61 interface_definition_head: • "procedure" IDENTIFIER '(' args_definition ')' ';'
   62                          | • "function" IDENTIFIER '(' args_definition ')' ':' type_expression ';'

    "function"   shift, and go to state 59
    "procedure"  shift, and go to state 60

    $default  reduce using rule 59 (interface_definition)

    interface_definition       go to state 78
    interface_definition_head  go to state 62


State 63

   27 const_definition: "const" IDENTIFIER ":=" • const_expression
  135 const_expression: • "null"
  136                 | • CONSTANT_INTEGER
  137                 | • CONSTANT_FLOAT
  138                 | • CONSTANT_CHAR
  139                 | • CONSTANT_STRING
  140                 | • '[' const_expression ".." const_expression ']'

    "null"            shift, and go to state 79
    CONSTANT_STRING   shift, and go to state 80
    CONSTANT_INTEGER  shift, and go to state 81
    CONSTANT_CHAR     shift, and go to state 82
    CONSTANT_FLOAT    shift, and go to state 83
    '['               shift, and go to state 84

    const_expression  go to state 85


State 64

   83 arg_definition: IDENTIFIER • ':' type_expression

    ':'  shift, and go to state 86


State 65

   33 method_definition: "main" '(' args_definition • ')' $@1 push_environment $@2 block pop_environment
   81 args_definition: args_definition • ',' arg_definition

    ','  shift, and go to state 87
    ')'  shift, and go to state 88


State 66

   82 args_definition: arg_definition •

    $default  reduce using rule 82 (args_definition)


State 67
